<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/general_content_padding"
        android:gravity="center"
        android:background="@drawable/gradient_login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/login_background">

            <ImageView
                android:layout_width="@dimen/login_logo"
                android:layout_height="@dimen/login_logo"
                android:layout_marginBottom="@dimen/login_spacing"
                android:src="@drawable/webtickets_logo"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_spacing">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_action"
                android:layout_marginBottom="@dimen/login_action_margin_bottom"/>

            <Button
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register"
                style="@style/Webtickets.Button.Inline"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>