<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_offline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/general_content_padding"
        android:layout_marginTop="@dimen/general_content_padding"
        android:layout_marginRight="@dimen/general_content_padding"
        android:textColor="@color/general_text_error"
        android:text="@string/scan_offline"
        android:visibility="gone"
        android:drawablePadding="@dimen/general_content_padding"/>

    <FrameLayout
        android:id="@+id/frameLayout_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_scan"
        android:layout_below="@id/textView_offline"
        android:layout_marginLeft="@dimen/general_content_padding"
        android:layout_marginTop="@dimen/general_content_padding"
        android:layout_marginRight="@dimen/general_content_padding"/>

    <Button
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_start"
        android:layout_margin="@dimen/general_content_padding"
        android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:id="@+id/layout_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/general_content_padding"
        android:background="@color/scan_success"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textView_successTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="@color/scan_feedback_text"
            android:text="@string/scan_success"
            android:drawablePadding="@dimen/general_content_padding"/>

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/scan_feedback_text"/>

        <TextView
            android:id="@+id/textView_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/scan_feedback_text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_failure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/general_content_padding"
        android:background="@color/scan_failure"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView_failureTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="@color/scan_feedback_text"
            android:text="@string/scan_failure"
            android:drawablePadding="@dimen/general_content_padding"/>

        <TextView
            android:id="@+id/textView_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/scan_feedback_text"/>

    </LinearLayout>

</RelativeLayout>